--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development ts-node src/index.ts",
+    "dev": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "dev:watch": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "prod": "npm run build && NODE_ENV=production node dist/index.js",
     "setup": "ts-node scripts/setup-dev.ts",
