--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "dev:watch": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "prod": "npm run build && NODE_ENV=production node dist/index.js",
+    "dev": "NODE_ENV=development  nodemon --exec ts-node src/index.ts",
+    "dev:watch": "nodemon src/index.ts",
+    "prod": "pm2 start ecosystem.config.js --env production",
+    "prod:stop": "pm2 stop ecosystem.config.js",
+    "prod:restart": "pm twice pm2 restart ecosystem.config.js",
+    "prod:logs": "pm2 logs",
+    "prod:monitor": "pm2 monit",
+    "prod:status": "pm2 status",
     "setup": "ts-node scripts/setup-dev.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -28,7 +33,7 @@
     "@polymarket/clob-client": "^4.18.0",
     "@prisma/client": "^6.9.0",
     "aws-kms-signer-nodejs": "^0.0.6",
-    "axios": "^1.6.0",
+    "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "dotenv": "^16.5.0",
     "ethers": "^6.14.3",
@@ -37,10 +42,11 @@
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/node-telegram-bot-api": "^0.64.0",
-    "nodemon": "^3.1.10",
-    "prisma": "^6.8.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.0",
+    "@types/node-telegram-bot-api": "^0.64.2",
+    "nodemon": "^3.0.2",
+    "prisma": "^5.8.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
