--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev:watch": "nodemon src/index.ts",
     "prod": "pm2 start ecosystem.config.js --env production",
     "prod:stop": "pm2 stop ecosystem.config.js",
-    "prod:restart": "pm twice pm2 restart ecosystem.config.js",
+    "prod:restart": "pm2 restart ecosystem.config.js",
     "prod:logs": "pm2 logs",
     "prod:monitor": "pm2 monit",
     "prod:status": "pm2 status",
+    "prod:setup": "ts-node scripts/setup-prod.ts",
     "setup": "ts-node scripts/setup-dev.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
