--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "dev": "NODE_ENV=development  nodemon --exec ts-node src/index.ts",
     "dev:watch": "nodemon src/index.ts",
+    "sync": "ts-node src/scripts/sync-markets.ts",
     "prod": "pm2 start ecosystem.config.js --env production",
     "prod:stop": "pm2 stop ecosystem.config.js",
     "prod:restart": "pm2 restart ecosystem.config.js",
