--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rm -rf dist/",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development  nodemon --exec ts-node src/index.ts",
+    "dev": "NODE_ENV=production  nodemon --exec ts-node src/index.ts",
     "dev:watch": "nodemon src/index.ts",
     "sync": "ts-node src/scripts/sync-markets.ts",
     "prod": "pm2 start ecosystem.config.js --env production",
